--- a/views/skills/index.ejs
+++ b/views/skills/index.ejs
@@ -1,23 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Express Skills</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-</head>
-<body>
-    <h1>Skills</h1>
-    <ul>
-      <% skills.forEach(function(t) { %>
-        <li>
-          <a href="/skills/<%= t.id%>"><%= t.skill %></a>
-            - 
-          <%= t.done ? 'done' : 'not done' %>
-        </li>
+  <%- include('../partials/header') %>
+  <h3>Skills as of <%= time %></h3>
+  
+  <ul>
+    <% skills.forEach(function(t) { %>
+      <li>
+        <form action="/skills/<%= t.id %>?_method=DELETE"
+          class="delete-form" method="POST">
+          <button type="submit">X</button>
+        </form>
+        <a href="/skills/<%= t.id %>"><%= t.skill %></a>
+        - 
+        <%= t.done ? 'done' : 'not done' %>
+      </li>
       <% }); %>
     </ul>
-  </body>
+    
+    <a href="/skills/new">Add Skill</a>
+   
+    <%- include('../partials/footer') %>
     
 
-</html>
