--- a/views/skills/show.ejs
+++ b/views/skills/show.ejs
@@ -1,18 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Express Skills</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-</head>
-<body>
-    <a href="/">Home</a>
-    |
-    <a href="/skills">All Skills</a>
-    <h3><%= skill.skill%></h3>
-    <h3>Complete: <%= skill.done ? 'Yes' : 'No' %></h3>
-  </body>
-    
-
-</html>
+  <%- include('../partials/header') %>
+  <h3><%= skill.skill %></h3>
+  <h3>Complete: <%= skill.done ? 'Yes' : 'No' %></h3>
+  <a href="/skills/<%= skill.id %>/edit">Edit Skill</a>
+  
+  
+  <%- include('../partials/footer') %>
